<resources>
    <string name="app_name">Mitra</string>
    <string name="floating_button">floating_button</string>
    <string name="accessibility_service_description">Description of your accessibility service</string>
    <string name="screenshot_button_desc">Take Screenshot</string>
    <string name="accessibility_service_label">Mitra Accessibility Service</string>
    <string name="close">Close</string>
    <string name="overlay_message">Screenshot Saved</string>
    <string name="input_hint">Hi, how can I help you? 👋</string>
    <string name="send">Send</string>
    <string name="continue_chat">Continue Chat</string>
    <string name="new_chat">New Chat</string>
    <string name="chat_options">How can I help you now? </string>
    <string name="microphone">Microphone</string>
    <string name="landing_image_desc">Landing page image</string>
    <string name="swipe_up_desc">Swipe up icon</string>
</resources>
